--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Endroid Maze</title>
+<title>Endroid Maze</title> 
+<link rel="manifest" href="manifest.json">
+<link rel="icon" href="icon.svg" type="svg/xml">
 <style>
 html,body{margin:0;padding:0;height:100%;background:#000022;display:flex;justify-content:center;align-items:center;}
 .wrap{width:95vw;height:95vh;display:flex;justify-content:center;align-items:center;position:relative;}
